# ass_ros2_ws

./: .colcon_test  .gitignore  COLCON_TEST_GUIDE.md  COLCON_TEST_SOLUTION.md  DOCUMENTATION.md  POSTGRESQL_MIGRATION.md  README.md  ROS2_NAMING_CONVENTION_SUMMARY.md  SEGFAULT_FIX.md  TEST_RESULTS.md  UNIT_TESTS.md  build_with_tests.sh  check_db.sh  check_db_simple.sh  cijfer_complete_system.launch.py  colcon_test_default.sh  colcon_test_smart.sh  complete_setup.sh  database.csv  debug_segfault.sh  docker-compose.yml  fix_build.sh  fix_database_emergency.sh  init-db.sql  inspect_db.sh  postgres_env.sh  quick_auth_fix.sh  quick_test.sh  readme.md  run.sh  run_system.sh  run_tests.sh  run_tests_quick.sh  setup_postgresql.sh  show_db.sh  socket_detective.sh  start_complete_system.ps1  start_complete_system.sh  start_system.sh  test.sh  (+7 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/g1_ass1_pkg/lib/g1_ass1_pkg/: cijfer_calculator  herkansing_cijfer_determinator  herkansing_scheduler  tentamen_result_generator
install/g1_ass1_pkg/share/g1_ass1_pkg/: local_setup.sh  package.sh  package.xml  package.zsh
install/g1_ass1_pkg/share/g1_ass1_pkg/cmake/: g1_ass1_pkgConfig.cmake
install/g1_interface_pkg/include/g1_interface_pkg/g1_interface_pkg/action/: herkanser.hpp
install/g1_interface_pkg/include/g1_interface_pkg/g1_interface_pkg/action/detail/: herkanser__builder.hpp  herkanser__description.c  herkanser__functions.c  herkanser__rosidl_typesupport_introspection_c.h  herkanser__struct.h  herkanser__type_support.hpp
install/g1_interface_pkg/include/g1_interface_pkg/g1_interface_pkg/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  student.h  student.hpp
install/g1_interface_pkg/include/g1_interface_pkg/g1_interface_pkg/srv/: tentamens.hpp
install/g1_interface_pkg/share/ament_index/resource_index/parent_prefix_path/: g1_interface_pkg
install/g1_interface_pkg/share/g1_interface_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/g1_interface_pkg/share/g1_interface_pkg/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_g1_interface_pkg__rosidl_generator_cExport-noconfig.cmake  export_g1_interface_pkg__rosidl_generator_cppExport.cmake  export_g1_interface_pkg__rosidl_generator_pyExport.cmake  g1_interface_pkgConfig.cmake  g1_interface_pkg__rosidl_typesupport_cExport-noconfig.cmake  g1_interface_pkg__rosidl_typesupport_cExport.cmake  g1_interface_pkg__rosidl_typesupport_cppExport-noconfig.cmake  g1_interface_pkg__rosidl_typesupport_introspection_cExport-noconfig.cmake  g1_interface_pkg__rosidl_typesupport_introspection_cExport.cmake  g1_interface_pkg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/g1_interface_pkg/share/g1_interface_pkg/msg/: Student.json  Tentamen.json  Tentamen.msg
install/g1_interface_pkg/share/g1_interface_pkg/srv/: Tentamens.json
legacy_scripts/: README.md  debug_postgres.sh  fix_postgres_connection.sh  start_system.sh
log/: latest_build  latest_test  latest_test-result
old_tests/: test_report_20251009_123833.txt  test_report_20251009_124409.txt  test_report_20251009_124948.txt  test_report_20251009_125423.txt  test_report_20251009_125603.txt  test_report_20251009_130422.txt  test_report_20251009_131313.txt  test_report_20251009_132511.txt  test_report_20251009_133738.txt  test_report_20251009_134533.txt  test_report_20251009_135020.txt  test_report_20251009_135247.txt  test_report_20251009_135341.txt  test_report_20251009_135834.txt  test_report_20251009_140319.txt  test_report_20251009_140604.txt  test_report_20251009_160136.txt  test_report_20251009_160903.txt  test_report_20251009_161020.txt
src/g1_25_assign1_interfaces_pkg/: CMakeLists.txt  package.xml
src/g1_25_assign1_interfaces_pkg/action/: Herkanser.action
src/g1_25_assign1_interfaces_pkg/msg/: Student.msg
src/g1_25_assign1_pkg/: CMakeLists.txt  package.xml
src/g1_25_assign1_pkg/launch/: system.launch.xml
src/g1_25_assign1_pkg/src/: database.cpp  g1_25_cijfer_calculator_node.cpp  g1_25_final_cijfer_determinator_node.cpp  g1_25_herkansing_cijfer_determinator_node.cpp  g1_25_herkansing_scheduler_node.cpp  g1_25_tentamen_result_generator_node.cpp
src/g1_25_assign1_pkg/test/: test_cijfer_calculator.cpp  test_database.cpp  test_herkansing_action.cpp  test_random_generator.cpp  test_system_integration.cpp  test_topic_communication.cpp
src/g1_ass1_pkg/: CMakeLists.txt  package.xml
src/g1_ass1_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/g1_ass1_pkg/install/g1_ass1_pkg/lib/g1_ass1_pkg/: herkansing_cijfer_determinator  herkansing_scheduler  tentamen_result_generator
src/g1_ass1_pkg/install/g1_ass1_pkg/share/g1_ass1_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
src/g1_ass1_pkg/launch/: cijfer_system.launch.py  complete_system.launch.py  system.launch.xml
src/g1_ass1_pkg/log/: latest_build  latest_test  latest_test-result
src/g1_ass1_pkg/src/: cijfer_calculator.cpp  database.cpp  database.h  database_postgresql.cpp  database_sqlite_backup.cpp  final_cijfer_determinator.cpp  herkansing_cijfer_determinator.cpp  herkansing_scheduler.cpp  tentamen_result_generator.cpp
src/g1_ass1_pkg/test/: test_cijfer_calculator.cpp  test_cijfer_service.cpp  test_database.cpp  test_final_cijfer_determinator.cpp  test_herkansing_action.cpp  test_system_integration.cpp  test_tentamen_publisher.cpp  test_topic_communication.cpp
src/g1_interface_pkg/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/g1_interface_pkg/share/g1_interface_pkg/: package.bash  package.zsh
src/log/: latest_build
(+22 files in other folders)
