<?xml version="1.0"?>
<package format="3">
  <name>g1_25_assign1_pkg</name>
  <version>0.1.0</version>
  <description>Nodes for G1 Group 25 Grade Calculator Assignment 1.</description>
  <maintainer email="justlikesemih04@gmail.com">broodjesemih</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>g1_25_assign1_interfaces_pkg</depend>
  <depend>libpqxx-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>
</package>