<?xml version="1.0"?>
<package format="3">
  <name>g1_ass1_pkg</name>
  <version>0.1.0</version>
  <description>Nodes for Tilmann's Cijfer Generator.</description>
  <maintainer email="justlikesemih04@gmail.com">broodjesemih</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>g1_interface_pkg</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <!-- PostgreSQL dependencies -->
  <build_depend>libpq-dev</build_depend>
  <exec_depend>libpq-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>
</package>